# darwin

./: .env.example  .gitignore  Makefile  Procfile  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/cubist/: config.py  llm.py  logging_setup.py
backend/cubist/agents/: builder.py  strategist.py
backend/cubist/agents/prompts/: builder_v1.md  strategist_v1.md
backend/cubist/api/: routes.py  server.py  websocket.py
backend/cubist/engines/: README.md  baseline.py  registry.py
backend/cubist/orchestration/: generation.py  run.py
backend/cubist/storage/: db.py
backend/cubist/tournament/: referee.py
backend/darwin/: config.py  llm.py  logging_setup.py
backend/darwin/agents/: adversary.py  builder.py  strategist.py
backend/darwin/agents/prompts/: adversary_v1.md  builder_v1.md  strategist_v1.md
backend/darwin/api/: routes.py  server.py  websocket.py
backend/darwin/engines/: README.md  base.py  baseline.py  random_engine.py  registry.py
backend/darwin/orchestration/: generation.py  run.py
backend/darwin/storage/: db.py  models.py
backend/darwin/tournament/: README.md  elo.py  modal_runner.py  referee.py  runner.py  selection.py
backend/scripts/: diagnose.py  diagnose_broken_engines.py  diagnose_real_llm.py
backend/tests/: test_adversary.py  test_baseline.py  test_builder.py  test_elo.py  test_orchestration.py  test_random_engine.py  test_referee.py  test_registry.py  test_routes.py  test_runner.py  test_selection.py  test_storage.py  test_strategist.py  test_websocket.py
docs/: ARCHITECTURE.md  CHANGELOG.md  (+5 more)
(+37 files in other folders)
